Manilla 2D Customizer changelog

Nov-??-2008
v0.20.2??
- updated about page with new donators
- added new font entry for the weather pag error text

Nov-02-2008
v0.19.203
- Added 2 new font items, weather tab low temperature, and weather tab forecast temperature
    neither of thee will allow a color ot be set, not sure why, if you figure it out please
    let me know
- removed experimental WM5 support... the cab will allow installation on a WM 5 device,
    but this app is being built with the WM6 SDK.  The WM5 supprt messed up my build process
- fixed bug with version not being displayed correctly on the about page (see above reason)

Oct-31-2008
v0.18.200
- Added font picker tab... this is highly experimental and may be buggy, please provide feedback
- re-ordered the tabs, now the tabs that you are more likely to use multiple times are shown first
- When adding a file to the shortcut the base name (no exe or lnk) is set as the softkey name
- file dialog now sorts directory and files alphabetically, listing directories first
- updated donator list
- launcher are saved before applying a new theme and restored when the theme is fully applied
- file dialog now compares extension string without regards to case
- save and restore tab enable/disable states
- fix bug when home XML line 3 would be checked inappropriately
- file dialog is now landscape and on screen keyboard compatable

Oct-29-2008
v0.17.183
- added new Home registry tab
-- adds option to set a custom name, custom icon, and hide the network name

Oct-28-2008
v0.16.178
- SOftkey dialog can now accept shortcut fifles (lnk files)
- added new program that will only open shortcuts for the softkeys
- updated donator list

Oct-28-2008
v0.15.176
- Added softkey dialog
    -- Only allows to set the name and command, not the command parameters
    -- The command must be an exe file
- Updated donator list

Oct-25-2008
v0.14.166
- Changed the underlying way the theme manager deals with XLM changes, previously